refactor(shipment): remove manual entity mapping and centralize DTO conversion