@@ -1,7 +1,6 @@
 package com.kml.api;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,6 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.kml.capacity.dto.WarehouseRequestDto;
 import com.kml.capacity.dto.WarehouseResponseDto;
+import static com.kml.capacity.mapper.WarehouseMapper.toDto;
 import com.kml.capacity.security.AuthorizationService;
 import com.kml.capacity.security.HardcodedUserContext;
 import com.kml.capacity.service.WarehouseService;
@@ -33,61 +33,48 @@ public class WarehouseController {
     this.warehouseService = warehouseService;
   }
 
-  // Create Warehosue
   @PostMapping
   public ResponseEntity<WarehouseResponseDto> createWarehouse(
       @RequestBody @Valid WarehouseRequestDto warehouseRequestDto) {
+
     User currentUser = HardcodedUserContext.getCurrentUser();
     if (!AuthorizationService.canCreateWarehouse(currentUser)) {
       return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
     }
+
     Warehouse warehouse =
-        this.warehouseService.createWarehouse(
+        warehouseService.createWarehouse(
             warehouseRequestDto.getName(), warehouseRequestDto.getAddress());
-    return ResponseEntity.status(HttpStatus.CREATED).body(mapToResponseDto(warehouse));
+
+    return ResponseEntity.status(HttpStatus.CREATED).body(toDto(warehouse));
   }
 
-  // Get Warehouse by Id
   @GetMapping("/{id}")
   public ResponseEntity<WarehouseResponseDto> getWarehouseById(@PathVariable Long id) {
+
     User currentUser = HardcodedUserContext.getCurrentUser();
     if (!AuthorizationService.canAccessWarehouse(currentUser, id)) {
       return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
     }
+
     return warehouseService
         .getWarehouseById(id)
-        .map(warehouse -> ResponseEntity.ok(mapToResponseDto(warehouse)))
+        .map(warehouse -> ResponseEntity.ok(toDto(warehouse)))
         .orElseGet(() -> ResponseEntity.notFound().build());
   }
 
-  // Get Warehouse by Name
   @GetMapping("/by-name")
   public ResponseEntity<WarehouseResponseDto> getWarehouseByName(@RequestParam String name) {
     return warehouseService
         .getWarehouseByName(name)
-        .map(warehouse -> ResponseEntity.ok(mapToResponseDto(warehouse)))
+        .map(warehouse -> ResponseEntity.ok(toDto(warehouse)))
         .orElseGet(() -> ResponseEntity.notFound().build());
   }
 
-  // Get All warehouse
   @GetMapping
   public ResponseEntity<List<WarehouseResponseDto>> getAllWarehouses() {
-    List<Warehouse> warehouses = this.warehouseService.getAllWarehouses();
-
-    List<WarehouseResponseDto> dtos =
-        warehouses.stream().map(this::mapToResponseDto).collect(Collectors.toList());
-
+    List<Warehouse> warehouses = warehouseService.getAllWarehouses();
+    List<WarehouseResponseDto> dtos = warehouses.stream().map(w -> toDto(w)).toList();
     return ResponseEntity.ok(dtos);
-  }
-
-  // Mapping Respose DTO
-  private WarehouseResponseDto mapToResponseDto(Warehouse warehouse) {
-
-    WarehouseResponseDto responseDto = new WarehouseResponseDto();
-    responseDto.setId(warehouse.getId());
-    responseDto.setName(warehouse.getName());
-    responseDto.setAddress(warehouse.getAddress());
-
-    return responseDto;
   }
 }
